			CHANGELOG for KAME kit

$Id: CHANGELOG,v 1.369 1999/12/23 06:17:07 jinmei Exp $

<199912>
1999-12-23  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.c (nd6_free): call pfctlinput with
	PRC_HOSTDEAD in order to remove all cached routes to the
	unreachable neighbor.
	* kame/sys/netinet6/in6_pcb.c (in6_pcbnotify): call in6_rtchange
	upon PRC_HOSTDEAD as well.

1999-12-23  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/tcp6_subr.c (tcp6_ctlinput):
	* kame/sys/netinet6/udp6_usrreq.c (udp6_ctlinput):
	* freebsd3/sys/netinet/tcp_subr.c (tcp6_ctlinput):
	* netbsd/sys/netinet/tcp_subr.c (tcp6_ctlinput):
	prevented these functions from referring to a dangling pointers
	to an mbuf or rcvif.
	
1999-12-23  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/ping6/ping6.c: when the -v option is given, recevied
	HbH/Dst options headers and routing headers are printed using
	rfc2292bis.

1999-12-23  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/{ip6opt.c, rthdr.c}: some new library
	functions were added according to rfc2292bis-01.
	See TODO.2292bis for the current status of the implementation.

Wed Dec 22 21:37:07 JST 1999  itojun@iijlab.net
	* freebsd[23]/ports/inn: upgrade to 2.2.2 (not tested by KAME team).
	  From: Satosi KOBAYASI <kobayasi@north.ad.jp>

Wed Dec 22 17:52:14 JST 1999 sakane@ydc.co.jp
	* kame/sys/netinet6:
	Alart when sequence number cycles.
	If cyclic sequence number is NOT allowed, sender doesn't send any
	packet with auditing.  Receiver discard packet with counting ipsecstat.

Wed Dec 22 17:42:43 JST 1999  itojun@iijlab.net
	* netbsd/pkgsrc/mail/fetchmail: upgrade to 5.2.1.

Wed Dec 22 17:16:21 JST 1999 sakane@ydc.co.jp
	* kame/kame/setkey:
	By default of manual keying, cyclic sequence number is allowed.
	"cyclic-seq" option is changed to "nocyclic-seq".  This means no
	allowance to cycle sequence number.

Wed Dec 22 16:30:56 JST 1999  itojun@iijlab.net